--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing idea</h1>
+<h1>フレーズを編集する</h1>
 
 <%= render "form", idea: @idea %>
 
 <br>
 
 <div>
-  <%= link_to "Show this idea", @idea %> |
-  <%= link_to "Back to ideas", ideas_path %>
+  <%= link_to "フレーズの詳細を見る", @idea %> |
+  <%= link_to "一覧に戻る", ideas_path %>
 </div>
