--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,14 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Ideas</h1>
+<h1>Phrases</h1>
 
 <div id="ideas">
   <% @ideas.each do |idea| %>
     <%= render idea %>
     <p>
-      <%= link_to "Show this idea", idea %>
+      <%= link_to "詳細を見る", idea %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New idea", new_idea_path %>
+<%= link_to "新しいフレーズを登録する", new_idea_path %>
