--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New idea</h1>
+<h1>新しいフレーズを登録する</h1>
 
 <%= render "form", idea: @idea %>
 
 <br>
 
 <div>
-  <%= link_to "Back to ideas", ideas_path %>
+  <%= link_to "一覧に戻る", ideas_path %>
 </div>
