--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @idea %>
 
 <div>
-  <%= link_to "Edit this idea", edit_idea_path(@idea) %> |
-  <%= link_to "Back to ideas", ideas_path %>
+  <%= link_to "編集する", edit_idea_path(@idea) %> |
+  <%= link_to "一覧に戻る", ideas_path %>
 
-  <%= button_to "このアイディアを削除する", @idea, method: :delete %>
+  <%= button_to "このフレーズを削除する", @idea, method: :delete %>
 </div>
