--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About Farm</h1>
-<p>Farmの公式ページです</p>
+<div class="px-4 py-5 my-5 text-center">
+  <h1 class="display-5 fw-bold">About Us</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">このサイトは、_mmakiyamaが <br> Rails Girls Tokyo 16th で作ってみたページです。</p>
+  </div>
+</div>
