ボタンとリストにスタイルを当てた

--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -26,7 +26,7 @@
     <%= form.file_field :picture %>
   </div>
 
-  <div>
-    <%= form.submit "登録する" %>
+  <div class="d-flex gap-3 py-3">
+    <%= form.submit "登録する", class: "btn btn-primary"%>
   </div>
 <% end %>
