--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,14 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Phrases</h1>
+<%= link_to "フレーズを登録する", new_idea_path, class: "btn btn-primary mb-3" %>
 
-<div id="ideas">
+<div class="list-group w-auto">
   <% @ideas.each do |idea| %>
     <%= render idea %>
-    <p>
-      <%= link_to "詳細を見る", idea %>
-    </p>
   <% end %>
 </div>
 
-<%= link_to "新しいフレーズを登録する", new_idea_path %>
